[gd_scene load_steps=54 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://background/Galaxy.tscn" type="PackedScene" id=2]
[ext_resource path="res://background/PurplePlanetFall.tscn" type="PackedScene" id=3]
[ext_resource path="res://background/PurpleMountainBg.tscn" type="PackedScene" id=4]
[ext_resource path="res://background/IcyBg.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/Boom.png" type="Texture" id=6]
[ext_resource path="res://MatShadow.tres" type="Material" id=7]
[ext_resource path="res://Menu/RocketShip.png" type="Texture" id=8]
[ext_resource path="res://Rocket Ship.gd" type="Script" id=9]
[ext_resource path="res://MadeInGodot.png" type="Texture" id=10]
[ext_resource path="res://PxLgamedevGame.png" type="Texture" id=11]
[ext_resource path="res://Menu/TextIntroducing.png" type="Texture" id=12]
[ext_resource path="res://Menu/NextButton.png" type="Texture" id=13]
[ext_resource path="res://Menu/PunkRobotMainTitle.png" type="Texture" id=14]
[ext_resource path="res://Menu/IssueNum.png" type="Texture" id=15]
[ext_resource path="res://PxLgamedevLOGO2.png" type="Texture" id=16]
[ext_resource path="res://Menu/ButtonExitWhite.png" type="Texture" id=17]
[ext_resource path="res://Menu/TextIntrepidHero.png" type="Texture" id=18]
[ext_resource path="res://Menu/TextFarReaches.png" type="Texture" id=19]
[ext_resource path="res://Menu/TextDiscovers.png" type="Texture" id=20]
[ext_resource path="res://background/Stars02.png" type="Texture" id=21]
[ext_resource path="res://Menu/TerrorPurple.png" type="Texture" id=22]
[ext_resource path="res://Menu/ButtonReturnWhite.png" type="Texture" id=23]
[ext_resource path="res://Menu/Controls.png" type="Texture" id=24]
[ext_resource path="res://Menu/ButtonEasyWhite.png" type="Texture" id=25]
[ext_resource path="res://Menu/ButtonMediumWhite.png" type="Texture" id=26]
[ext_resource path="res://Menu/ButtonImpossibleWhite.png" type="Texture" id=27]
[ext_resource path="res://Menu/ButtonOptionsWhite.png" type="Texture" id=28]
[ext_resource path="res://Menu/ButtonControlsWhite.png" type="Texture" id=29]
[ext_resource path="res://BlankSquare.png" type="Texture" id=30]
[ext_resource path="res://BitFontNum.tres" type="DynamicFont" id=31]
[ext_resource path="res://coin/Coin10.tscn" type="PackedScene" id=32]
[ext_resource path="res://coin/Coin20.tscn" type="PackedScene" id=33]
[ext_resource path="res://coin/Coin30.tscn" type="PackedScene" id=34]
[ext_resource path="res://coin/Coin50.tscn" type="PackedScene" id=35]
[ext_resource path="res://coin/HeartPickup.tscn" type="PackedScene" id=36]
[ext_resource path="res://BitFont.tres" type="DynamicFont" id=37]
[ext_resource path="res://Menu/PunkRobotSmall.png" type="Texture" id=38]
[ext_resource path="res://Menu/TextChapComp.png" type="Texture" id=39]
[ext_resource path="res://Menu/TextChapNext1.png" type="Texture" id=40]
[ext_resource path="res://Audio/ArcadeNeptune.wav" type="AudioStream" id=41]

[sub_resource type="Animation" id=1]
resource_name = "BackToMain"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, -540 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel1/PurpleBg:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, -540 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel2/IcyBg:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 540 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "ChangePanel"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel1/PurpleBg:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -540 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel2/IcyBg:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 540 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Effect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Effect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 1.5, 2.2, 3.1, 4.2, 4.9 ),
"transitions": PoolRealArray( 1.6245, 1, 0.999999, 0.707107, 2.73208, 1.27456, 1.18921 ),
"update": 0,
"values": [ Vector2( 340, 265 ), Vector2( -100, -100 ), Vector2( 200, 250 ), Vector2( 350, 280 ), Vector2( 339, 275 ), Vector2( 339, 280 ), Vector2( 340, 265 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 3, 4 ),
"transitions": PoolRealArray( 2.63902, 0.482968, 1, 0.594604 ),
"update": 0,
"values": [ 0.0, -3.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 3, 3.6, 4.3, 4.9 ),
"transitions": PoolRealArray( 1.6245, 1.18921, 1.41421, 2.73208, 1.27456, 1.18921 ),
"update": 0,
"values": [ Vector2( 340, 265 ), Vector2( 339, 230 ), Vector2( 339, 280 ), Vector2( 339, 275 ), Vector2( 339, 280 ), Vector2( 340, 265 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 3, 4 ),
"transitions": PoolRealArray( 2.63902, 0.482968, 1, 0.594604 ),
"update": 0,
"values": [ 0.0, -3.0, 0.0, 0.0 ]
}

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("BgLayer/Title")

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("BgLayer/Intro0")

[sub_resource type="ViewportTexture" id=8]
viewport_path = NodePath("BgLayer/Panel1")

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("Stage")

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("BgLayer/Panel2")

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

render_mode unshaded;

uniform float speed = 0.5;

uniform float volume = 6.0;

uniform float volume1 = 0.3;

uniform float volume2 = 0.7;

uniform float volume3 = 0.3;

void fragment() {

float factor;

highp vec4 k = vec4(TIME) * speed;

k.xy = UV * volume;

float val1 = length(0.5-fract(k.xyw *= mat3(vec3(-2.0,-1.0,0.0), vec3(2.0,-1.0,1.0), vec3(1.0,-1.0,-1.0)) * volume1));

float val2 = length(0.5-fract(k.xyw *= mat3(vec3(-2.0,-1.0,0.0), vec3(2.0,-1.0,1.0), vec3(1.0,-1.0,-1.0)) * volume2));

float val3 = length(0.5-fract(k.xyw *= mat3(vec3(-2.0,-1.0,0.0), vec3(2.0,-1.0,1.0), vec3(1.0,-1.0,-1.0)) * volume3));

factor = pow(min(min(val1,val2),val3), 7.0);

vec4 tex_color = textureLod(SCREEN_TEXTURE, SCREEN_UV + factor, 1.0) + factor * 3.0;

COLOR = tex_color;

}

"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/speed = 1.0
shader_param/volume = 12.0
shader_param/volume1 = 0.3
shader_param/volume2 = 0.7
shader_param/volume3 = 0.3

[node name="Menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BgLayer" type="ViewportContainer" parent="."]
focus_mode = 1

[node name="Title" type="Viewport" parent="BgLayer"]
size = Vector2( 1920, 540 )
handle_input_locally = false
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="GalaxyBG" parent="BgLayer/Title" instance=ExtResource( 2 )]

[node name="Intro0" type="Viewport" parent="BgLayer"]
size = Vector2( 960, 540 )
handle_input_locally = false
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="PlanetFall" parent="BgLayer/Intro0" instance=ExtResource( 3 )]

[node name="Panel1" type="Viewport" parent="BgLayer"]
size = Vector2( 960, 540 )
handle_input_locally = false
disable_3d = true
render_target_v_flip = true
render_target_update_mode = 3

[node name="PurpleBg" parent="BgLayer/Panel1" instance=ExtResource( 4 )]

[node name="Panel2" type="Viewport" parent="BgLayer"]
editor/display_folded = true
size = Vector2( 960, 540 )
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="IcyBg" parent="BgLayer/Panel2" instance=ExtResource( 5 )]

[node name="Tween" type="Tween" parent="BgLayer"]

[node name="ChangePanel" type="AnimationPlayer" parent="BgLayer"]
anims/BackToMain = SubResource( 1 )
anims/ChangePanel = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Effect" type="Sprite" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 407.255, 148.82 )
scale = Vector2( 1.69135, 1.68858 )
texture = ExtResource( 6 )
hframes = 10
frame = 9

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/MouseClick = SubResource( 3 )

[node name="Rocket Ship" type="Sprite" parent="CanvasLayer"]
editor/display_folded = true
visible = false
material = ExtResource( 7 )
position = Vector2( 340, 265 )
texture = ExtResource( 8 )
vframes = 3
frame = 2
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Rocket Ship"]
autoplay = "Flyi in"
"anims/Flyi in" = SubResource( 4 )
anims/Flying = SubResource( 5 )

[node name="Timer" type="Timer" parent="CanvasLayer/Rocket Ship"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Stage" type="Viewport" parent="."]
size = Vector2( 960, 540 )
own_world = true
render_target_v_flip = true
audio_listener_enable_2d = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Page" type="Node2D" parent="."]

[node name="TitleCard" type="Sprite" parent="Page"]
position = Vector2( -959.89, -270.383 )
texture = SubResource( 6 )

[node name="MadeInGodot" type="Sprite" parent="Page/TitleCard"]
position = Vector2( -833.523, -229.486 )
texture = ExtResource( 10 )

[node name="PxLgamedevLOGO" type="Sprite" parent="Page/TitleCard"]
position = Vector2( -705.41, 140.06 )
texture = ExtResource( 11 )

[node name="Introducing" type="Sprite" parent="Page/TitleCard"]
position = Vector2( -190.575, -235.567 )
texture = ExtResource( 12 )

[node name="Next1" type="Sprite" parent="Page/TitleCard"]
position = Vector2( -120.005, 208.186 )
texture = ExtResource( 13 )

[node name="MainTitle" type="Sprite" parent="Page/TitleCard"]
position = Vector2( 470.896, -73.39 )
texture = ExtResource( 14 )

[node name="IssueNum" type="Sprite" parent="Page/TitleCard"]
position = Vector2( 891.22, -220.033 )
texture = ExtResource( 15 )

[node name="PxLgamedevAproved" type="Sprite" parent="Page/TitleCard"]
position = Vector2( 899.035, -143.696 )
scale = Vector2( 0.364042, 0.377199 )
texture = ExtResource( 16 )

[node name="Next2" type="Sprite" parent="Page/TitleCard"]
position = Vector2( 841.244, 206.679 )
texture = ExtResource( 13 )

[node name="TopWhite" type="ColorRect" parent="Page/TitleCard"]
margin_left = -947.0
margin_top = -303.0
margin_right = 968.0
margin_bottom = -265.0

[node name="BottomWhite" type="ColorRect" parent="Page/TitleCard"]
margin_left = -463.0
margin_top = 247.0
margin_right = 970.0
margin_bottom = 281.0

[node name="RightWhite" type="ColorRect" parent="Page/TitleCard"]
margin_left = 937.594
margin_top = -303.369
margin_right = 973.594
margin_bottom = 281.631

[node name="LeftWhite" type="ColorRect" parent="Page/TitleCard"]
margin_left = -493.0
margin_top = -303.0
margin_right = -457.0
margin_bottom = 281.0

[node name="LeftWhite3" type="ColorRect" parent="Page/TitleCard"]
margin_left = -23.0
margin_top = -303.0
margin_right = 13.0
margin_bottom = 281.0

[node name="LeftWhite2" type="ColorRect" parent="Page/TitleCard"]
margin_left = -969.0
margin_top = -303.0
margin_right = -933.0
margin_bottom = 281.0

[node name="ButtonExit" type="TextureButton" parent="Page/TitleCard"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1914.57
margin_top = -364.412
margin_right = -1706.57
margin_bottom = -300.412
focus_mode = 1
texture_normal = ExtResource( 17 )

[node name="PurpleIntro2" type="Sprite" parent="Page"]
position = Vector2( -1449.89, 279.617 )
texture = SubResource( 7 )

[node name="TopWhite" type="ColorRect" parent="Page/PurpleIntro2"]
margin_left = -463.166
margin_top = -303.073
margin_right = 494.834
margin_bottom = -265.073

[node name="BottomWhite" type="ColorRect" parent="Page/PurpleIntro2"]
margin_left = -463.0
margin_top = 247.0
margin_right = 495.0
margin_bottom = 281.0

[node name="RightWhite" type="ColorRect" parent="Page/PurpleIntro2"]
margin_left = 475.594
margin_top = -303.369
margin_right = 511.594
margin_bottom = 281.631

[node name="LeftWhite" type="ColorRect" parent="Page/PurpleIntro2"]
margin_left = -480.0
margin_top = -303.369
margin_right = -444.0
margin_bottom = 281.631

[node name="LeftWhite2" type="ColorRect" parent="Page/PurpleIntro2"]
margin_left = -170.0
margin_top = -303.369
margin_right = -134.0
margin_bottom = 281.631

[node name="LeftWhite3" type="ColorRect" parent="Page/PurpleIntro2"]
margin_left = 130.0
margin_top = -303.369
margin_right = 166.0
margin_bottom = 281.631

[node name="Sprite" type="Sprite" parent="Page/PurpleIntro2"]
position = Vector2( -316.334, -243.39 )
scale = Vector2( 0.500989, 0.5 )
texture = ExtResource( 18 )

[node name="Sprite4" type="Sprite" parent="Page/PurpleIntro2"]
position = Vector2( -1.4624, -122.657 )
scale = Vector2( 0.481589, 0.5 )
texture = ExtResource( 19 )

[node name="Sprite3" type="Sprite" parent="Page/PurpleIntro2"]
position = Vector2( 370.825, 139.445 )
scale = Vector2( 0.53, 0.5 )
texture = ExtResource( 20 )

[node name="Sprite2" type="Sprite" parent="Page/PurpleIntro2"]
position = Vector2( 390.954, 207.838 )
scale = Vector2( 0.809979, 1.02855 )
texture = ExtResource( 13 )

[node name="PurpleIntro3" type="Sprite" parent="Page"]
editor/display_folded = true
position = Vector2( -499.89, 278.617 )
texture = ExtResource( 21 )

[node name="Sprite" type="Sprite" parent="Page/PurpleIntro3"]
position = Vector2( 12.53, -1.03 )
texture = ExtResource( 22 )

[node name="TopWhite" type="ColorRect" parent="Page/PurpleIntro3"]
margin_left = -463.166
margin_top = -303.073
margin_right = 494.834
margin_bottom = -265.073

[node name="BottomWhite" type="ColorRect" parent="Page/PurpleIntro3"]
margin_left = -463.0
margin_top = 247.0
margin_right = 495.0
margin_bottom = 281.0

[node name="RightWhite" type="ColorRect" parent="Page/PurpleIntro3"]
margin_left = 475.594
margin_top = -303.369
margin_right = 511.594
margin_bottom = 281.631

[node name="LeftWhite" type="ColorRect" parent="Page/PurpleIntro3"]
margin_left = -480.0
margin_top = -303.369
margin_right = -444.0
margin_bottom = 281.631

[node name="Panel0" type="Sprite" parent="Page"]
editor/display_folded = true
position = Vector2( 480.36, -286.352 )
texture = ExtResource( 21 )

[node name="TopWhite" type="ColorRect" parent="Page/Panel0"]
margin_left = -482.211
margin_top = -284.028
margin_right = 475.789
margin_bottom = -246.028

[node name="BottomWhite" type="ColorRect" parent="Page/Panel0"]
margin_left = -482.211
margin_top = 262.31
margin_right = 475.789
margin_bottom = 300.31

[node name="RightWhite" type="ColorRect" parent="Page/Panel0"]
margin_left = 456.549
margin_top = -284.324
margin_right = 492.549
margin_bottom = 300.676

[node name="LeftWhite" type="ColorRect" parent="Page/Panel0"]
margin_left = -499.045
margin_top = -284.324
margin_right = -463.045
margin_bottom = 300.676

[node name="ButtonReturn" type="TextureButton" parent="Page/Panel0"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -824.792
margin_top = 191.139
margin_right = -626.792
margin_bottom = 256.139
texture_normal = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="Page/Panel0"]
texture = ExtResource( 24 )

[node name="Panel1" type="Sprite" parent="Page"]
position = Vector2( 481.64, 271.587 )
texture = SubResource( 8 )

[node name="TopWhite" type="ColorRect" parent="Page/Panel1"]
margin_left = -485.265
margin_top = -294.479
margin_right = 472.735
margin_bottom = -256.479

[node name="BottomWhite" type="ColorRect" parent="Page/Panel1"]
margin_left = -485.265
margin_top = 251.859
margin_right = 472.735
margin_bottom = 289.859

[node name="RightWhite" type="ColorRect" parent="Page/Panel1"]
margin_left = 453.495
margin_top = -294.775
margin_right = 489.495
margin_bottom = 290.225

[node name="LeftWhite" type="ColorRect" parent="Page/Panel1"]
margin_left = -502.099
margin_top = -294.775
margin_right = -466.099
margin_bottom = 290.225

[node name="ButtonEasy" type="TextureButton" parent="Page/Panel1"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -903.36
margin_top = -355.33
margin_right = -676.36
margin_bottom = -297.33
focus_mode = 1
texture_normal = ExtResource( 25 )

[node name="ButtonMedium" type="TextureButton" parent="Page/Panel1"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -888.266
margin_top = -320.268
margin_right = -501.266
margin_bottom = -210.268
texture_normal = ExtResource( 26 )

[node name="ButtonHard" type="TextureButton" parent="Page/Panel1"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -806.851
margin_top = -214.902
margin_right = -579.851
margin_bottom = -156.902
texture_normal = ExtResource( 27 )

[node name="ButtonOptions" type="TextureButton" parent="Page/Panel1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1443.78
margin_top = 123.956
margin_right = -1216.78
margin_bottom = 181.956
focus_mode = 1
texture_normal = ExtResource( 28 )

[node name="ButtonControls" type="TextureButton" parent="Page/Panel1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1427.49
margin_top = -242.317
margin_right = -1200.49
margin_bottom = -179.317
texture_normal = ExtResource( 29 )

[node name="ButtonBack" type="TextureButton" parent="Page/Panel1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1427.94
margin_top = -349.033
margin_right = -1203.94
margin_bottom = -285.033
focus_mode = 1
texture_normal = ExtResource( 17 )

[node name="Panel2" type="Sprite" parent="Page"]
editor/display_folded = true
position = Vector2( 1425.11, 280.617 )
texture = SubResource( 9 )

[node name="TopWhite" type="ColorRect" parent="Page/Panel2"]
margin_left = -463.166
margin_top = -303.073
margin_right = 494.834
margin_bottom = -265.073

[node name="BottomWhite" type="ColorRect" parent="Page/Panel2"]
margin_left = -463.166
margin_top = 243.265
margin_right = 494.834
margin_bottom = 281.265

[node name="RightWhite" type="ColorRect" parent="Page/Panel2"]
margin_left = 475.594
margin_top = -303.369
margin_right = 511.594
margin_bottom = 281.631

[node name="LeftWhite" type="ColorRect" parent="Page/Panel2"]
margin_left = -480.0
margin_top = -303.369
margin_right = -444.0
margin_bottom = 281.631

[node name="Panel3" type="Sprite" parent="Page"]
editor/display_folded = true
position = Vector2( 480.36, 809.648 )
texture = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="Page/Panel3"]
material = SubResource( 12 )
position = Vector2( 3.07574, 258.113 )
scale = Vector2( 16.1547, 1.52055 )
texture = ExtResource( 30 )

[node name="TopWhite" type="ColorRect" parent="Page/Panel3"]
margin_left = -482.211
margin_top = -284.028
margin_right = 475.789
margin_bottom = -246.028

[node name="BottomWhite" type="ColorRect" parent="Page/Panel3"]
margin_left = -482.211
margin_top = 262.31
margin_right = 475.789
margin_bottom = 300.31

[node name="RightWhite" type="ColorRect" parent="Page/Panel3"]
margin_left = 456.549
margin_top = -284.324
margin_right = 492.549
margin_bottom = 300.676

[node name="LeftWhite" type="ColorRect" parent="Page/Panel3"]
margin_left = -499.045
margin_top = -284.324
margin_right = -463.045
margin_bottom = 300.676

[node name="ButtonReturn" type="TextureButton" parent="Page/Panel3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1379.46
margin_top = 175.885
margin_right = -1185.46
margin_bottom = 239.885
focus_mode = 1
texture_normal = ExtResource( 23 )

[node name="Panel4" type="Sprite" parent="Page"]
editor/display_folded = true
position = Vector2( 1440.36, 809.648 )
texture = ExtResource( 21 )

[node name="TopWhite" type="ColorRect" parent="Page/Panel4"]
margin_left = -482.211
margin_top = -284.028
margin_right = 475.789
margin_bottom = -246.028

[node name="BottomWhite" type="ColorRect" parent="Page/Panel4"]
margin_left = -482.211
margin_top = 262.31
margin_right = 475.789
margin_bottom = 300.31

[node name="RightWhite" type="ColorRect" parent="Page/Panel4"]
margin_left = 456.549
margin_top = -284.324
margin_right = 492.549
margin_bottom = 300.676

[node name="LeftWhite" type="ColorRect" parent="Page/Panel4"]
margin_left = -499.045
margin_top = -284.324
margin_right = -463.045
margin_bottom = 300.676

[node name="GemY" type="RichTextLabel" parent="Page/Panel4"]
margin_left = 145.0
margin_top = -42.0
margin_right = 346.0
margin_bottom = -1.0
custom_fonts/normal_font = ExtResource( 31 )
text = "000000"

[node name="Coin" parent="Page/Panel4" instance=ExtResource( 32 )]
position = Vector2( 109.15, -29.6908 )

[node name="GemB" type="RichTextLabel" parent="Page/Panel4"]
margin_left = 115.0
margin_top = -11.0
margin_right = 316.0
margin_bottom = 29.0
custom_fonts/normal_font = ExtResource( 31 )
text = "000000"

[node name="20gem" parent="Page/Panel4" instance=ExtResource( 33 )]
position = Vector2( 79.15, -0.9254 )

[node name="GemG" type="RichTextLabel" parent="Page/Panel4"]
margin_left = 85.0
margin_top = 18.0
margin_right = 286.0
margin_bottom = 59.0
custom_fonts/normal_font = ExtResource( 31 )
text = "000000"

[node name="30gem" parent="Page/Panel4" instance=ExtResource( 34 )]
position = Vector2( 48.9645, 29.2111 )

[node name="GemR" type="RichTextLabel" parent="Page/Panel4"]
margin_left = 55.0
margin_top = 48.0
margin_right = 256.0
margin_bottom = 89.0
custom_fonts/normal_font = ExtResource( 31 )
text = "000000"

[node name="50gem" parent="Page/Panel4" instance=ExtResource( 35 )]
position = Vector2( 18.9645, 60.5331 )

[node name="Hearts" type="RichTextLabel" parent="Page/Panel4"]
margin_left = 25.0
margin_top = 84.0
margin_right = 226.0
margin_bottom = 124.0
custom_fonts/normal_font = ExtResource( 31 )
text = "000000"

[node name="Heart" parent="Page/Panel4" instance=ExtResource( 36 )]
position = Vector2( -10.1674, 95.6445 )

[node name="TotalScore" type="RichTextLabel" parent="Page/Panel4"]
margin_left = 229.0
margin_top = -123.0
margin_right = 430.0
margin_bottom = -83.0
custom_fonts/normal_font = ExtResource( 31 )
text = "000000"

[node name="ScoreLabel" type="RichTextLabel" parent="Page/Panel4"]
margin_left = 20.5823
margin_top = -132.656
margin_right = 221.582
margin_bottom = -77.6556
custom_fonts/normal_font = ExtResource( 37 )
text = "Total Score:"

[node name="Sprite" type="Sprite" parent="Page/Panel4"]
position = Vector2( -270, -50 )
texture = ExtResource( 38 )

[node name="Sprite3" type="Sprite" parent="Page/Panel4"]
position = Vector2( -316.204, -218.823 )
scale = Vector2( 0.549159, 0.482548 )
texture = ExtResource( 39 )

[node name="Sprite4" type="Sprite" parent="Page/Panel4"]
position = Vector2( 209.581, 221.173 )
scale = Vector2( 0.95006, 0.789562 )
texture = ExtResource( 40 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 41 )
autoplay = true
[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CanvasLayer/Rocket Ship/Timer" to="CanvasLayer/Rocket Ship" method="start_hover"]
[connection signal="pressed" from="Page/TitleCard/ButtonExit" to="." method="exit_button"]
[connection signal="pressed" from="Page/Panel0/ButtonReturn" to="." method="return_to_main"]
[connection signal="pressed" from="Page/Panel1/ButtonEasy" to="." method="_easy_start"]
[connection signal="pressed" from="Page/Panel1/ButtonMedium" to="." method="_med_start"]
[connection signal="pressed" from="Page/Panel1/ButtonHard" to="." method="_hard_start"]
[connection signal="pressed" from="Page/Panel1/ButtonOptions" to="." method="options"]
[connection signal="pressed" from="Page/Panel1/ButtonControls" to="." method="controls"]
[connection signal="pressed" from="Page/Panel1/ButtonBack" to="." method="back_to_title_button"]
[connection signal="pressed" from="Page/Panel3/ButtonReturn" to="." method="return_to_main"]
